crono_tt4/TDC4_interface.h

	/*! \ingroup staticinfo
	*	\brief Structure contains static information
	*
	*	This structure contains information about the board that does not change during run time.
	*	It is provided by the function @link statfuncts xtdc4_get_static_info() @endlink.
	*/
	typedef struct {

		int size; //!< The number of bytes occupied by the structure
		/*	A version number that is increased when the definition of the structure is changed. 
		*	The increment can be larger than one to match driver version numbers or similar. 
		*	Set to 0 for all versions up to first release.
		*/
		int version; //!< The version number
		/*!	\brief ID of the board.
		*
		*	This value is passed to the constructor. It is reflected in the	output data.
		*/
		int board_id;
		/*!	\brief encoded version number
		*
		*	The lower three bytes contain a triple level hierarchy of version numbers. 
		*	E.g. 0x010103 codes version 1.1.3.
		*	
		*	A change in the first digit generally requires
		*	a recompilation of user applications. Change in the second digit denote significant 
		*	improvements or changes that don't break compatibility and the third digit changes
		*	with minor bugfixes and the like.
		*/
		int driver_revision;
		/*	This can be read from a register.
		*/
		int firmware_revision; //!< Revision number of the FPGA configuration.
		/*!	\brief board revision number
		*
		*	The board revision number can be read from a register. It is a four bit number
		*	that changes when the schematic of the board is changed.
		*	- 0: Experimental first board Version. Labeled "Rev. 1"
		*	- 2: First commercial Version. Labeled "Rev. 2"
		*/
		int board_revision;
		/*!	\brief Describes the schematic configuration of the board.
		*
		*	The same board schematic can be populated in multiple variants. This is a eight
		*	bit code that can be read from a register.
		*/
		int board_configuration;
		/*	A number to track builds of the firmware in more detail than the firmware revision. It changes
		*	with every change in the firmware, even if there is no visible effect for the user. The subversion
		*	revision number can be read from a register. 
		*/
		int subversion_revision; //!< Subversion revision id of the FPGA configuration.
		/*  This is the chipID as read from the 16 bit ths788 chip id register at SPI address 0x83.
		*	This value should be cached.
		*/
		int chip_id; //!< 16bit factory ID of the TDC chip.
		/*!	\brief Serial number
		*	
		*	with year and running number in 8.24 format. The number is identical to the one
		*	printed on the silvery sticker on the board.
		*/
		int board_serial;
		unsigned int flash_serial_low;	//!< low 32 bits of 64 bit manufacturer serial number of the flash chip
		unsigned int flash_serial_high;	//!< high 32 bits of 64 bit manufacturer serial number of the flash chip
		/*!	\brief Flash data is valid and in use
		*	
		*	If not 0 the driver found valid calibration data in the flash on the board and is using it.
		*/
		int flash_valid;

		/*! \brief calibration date
		*
		* DIN EN ISO 8601 string YYYY-MM-DD HH:DD describing the time when the card was calibrated.
		*/
		char calibration_date[20];
	} tdc4_static_info;
	/*! \ingroup fastinfo
	*	\brief contains fast dynamic information
	*
	*	This call returns a structure that contains dynamic information that can be obtained
	*	within a few microseconds. 
	*/
	typedef struct {
		int size; //!< The number of bytes occupied by the structure
		/*	A version number that is increased when the definition of the structure is changed. 
		The increment can be larger than one to match driver version numbers or similar. Set
		to 0 for all versions up to first release.
		*/
		int version; //!< The version number
		/*! \brief Speed of the TDC fan.
		*
		*	Reports 0, if no fan is present
		*/
		int tdc_rpm;
		/*! \brief Speed of the FPGA fan.
		*
		* Reports 0, if no fan is present.
		*/
		int fpga_rpm;
		/*!	\brief Alert bits from temperature sensor and the system monitor
		*
		*	- bit 0:	THS788 over temperature alarm
		*/
		int alerts;
		/*! \brief organizes power supply of PCIe lanes.
		*/
		int pcie_pwr_mgmt;
		int pcie_link_width; //!< Number of PCIe lanes the card uses.
		/*!	\brief Maximum size for a single PCIe transaction
		*  in bytes. Depends on system configuration.
		*/
		int pcie_max_payload;
	} tdc4_fast_info;
	/*! \ingroup paraminfo
	*	\brief contains configuration changes
	*
	*	Structure filled by @link statfuncts xtdc4_get_param_info() @endlink. This structure
	*	contains information that change indirectly due to configuration changes.
	*/
	typedef struct {
		int size; //!< The number of bytes occupied by the structure
		/* is increased when the definition of the structure is changed. 
		The increment can be larger than one to match driver version numbers or similar. Set
		to 0 for all versions up to first release.
		*/
		int version; //!< The version number
		/*!	\brief Binsize (in ps) of the measured TDC data. 
		*
		*	The TDC main clk is running at a frequency of 76.8 GHz 
		*  resulting in a binsize of ~13.0208 ps.
		*/
		double binsize;
		/*!	\brief Board ID
		*
		*	The board uses this ID to identify itself in the output data stream. The ID takes
		*	values between 0 and 255.
		*/
		int board_id;
		/*!	\brief Number of channels in the current TDC mode
		*
		* Currently fixed at 4.
		*/
		int channels;
		/*! \brief bit assignment of each enabled input channel.
		*	
		*	Mask assigns a certain bit to each enabled input channel.
		*/
		int channel_mask;
		__int64 total_buffer; //!< The total amount of DMA buffer in bytes.
	} tdc4_param_info;
	/*!	\ingroup channel
	*	\brief Contains TDC channel settings
	*/
	typedef struct {
		crono_bool_t enabled;			//!< Enable TDC channel. 
		crono_bool_t rising;			//!< Set whether to record rising or falling edges.
		crono_bool_t cc_enable;			//!< Enable carry chain TDC as backup
		crono_bool_t cc_same_edge;		//!< Set whether the carry chain TDC records the same edge as THS788 (as backup) or opposite edge
		crono_bool_t ths788_disable;	//!< Disable THS788 timestamps

		/*!	\brief Veto function 
		*
		*	only timestamps >= start are recorded.
		*/
		int start;
		/*!	\brief Veto function
		*
		*	only timestamps <= stop are recorded. 
		*/
		int stop;

	} tdc4_channel;
	/*!	\ingroup lowres_channel
	*	\brief Contains digital channel settings
	*/
	typedef struct {
		crono_bool_t enabled; //!< Enable TDC channel.
		/*!	\brief Veto function 
		*
		*	only timestamps >= start are recorded.
		*/
		int start;
		/*!	\brief Veto function
		*
		*	only timestamps <= stop are recorded. 
		*/
		int stop;
	} tdc4_lowres_channel;
	/*!	\ingroup tiger
	*	\brief contains settings of timing generator
	*/
	typedef struct {
		crono_bool_t enable; //!< activates timing generator
		/*! \brief inverts output polarity
		*
		* default is set to false.
		*/
		crono_bool_t negate;
		/*!	\brief enables/disables retrigger setting
		*
		*	Default is set to false. If retriggering is enabled the timer is reset to the value of the start
		*	parameter, whenever the input signal is set while waiting to reach the stop time.
		*/
		crono_bool_t retrigger;
		// default is true
		crono_bool_t extend;				//!< not implemented
		crono_bool_t enable_lemo_output;	//!< enables the LEMO output
		/*! \brief Precursor
		*  
		*  Number of 6.6ns clock cycles before the tiger output goes active
		*	relative to the trigger signal.
		*/
		int start;
		/*! \brief postcursor
		*  
		*  Number of 6.6ns clock cycles before the tiger output goes inactive
		*	relative to the trigger signal.
		*/
		int stop;
		/*!	\brief mask for choosing the trigger source
		*
		*	A bit mask with a bit set for all trigger sources that can trigger this channel. Default is
		*	XTDC4_TRIGGER_SOURCE_S. One can choose a from a source @link deftriggersource here @endlink.
		*/
		int sources;
	} tdc4_tiger_block;
	/* low res trigger config */
	/*!\ingroup trigger
	*	\brief contains trigger settings
	*/
	typedef struct {
		crono_bool_t falling;	//!< triggers on falling edges
		crono_bool_t rising;	//!< triggers on rising edges
	} tdc4_trigger;