src/crono-bindgen/crono_tt4.rs

#[doc = " \\ingroup staticinfo"]
#[doc = "\t\\brief Structure contains static information"]
#[doc = ""]
#[doc = "\tThis structure contains information about the board that does not change during run time."]
#[doc = "\tIt is provided by the function @link statfuncts xtdc4_get_static_info() @endlink."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct tdc4_static_info {
    #[doc = "!< The number of bytes occupied by the structure"]
    pub size: ::std::os::raw::c_int,
    #[doc = "!< The version number"]
    pub version: ::std::os::raw::c_int,
    #[doc = "\t\\brief ID of the board."]
    #[doc = ""]
    #[doc = "\tThis value is passed to the constructor. It is reflected in the\toutput data."]
    pub board_id: ::std::os::raw::c_int,
    #[doc = "\t\\brief encoded version number"]
    #[doc = ""]
    #[doc = "\tThe lower three bytes contain a triple level hierarchy of version numbers."]
    #[doc = "\tE.g. 0x010103 codes version 1.1.3."]
    #[doc = ""]
    #[doc = "\tA change in the first digit generally requires"]
    #[doc = "\ta recompilation of user applications. Change in the second digit denote significant"]
    #[doc = "\timprovements or changes that don't break compatibility and the third digit changes"]
    #[doc = "\twith minor bugfixes and the like."]
    pub driver_revision: ::std::os::raw::c_int,
    #[doc = "!< Revision number of the FPGA configuration."]
    pub firmware_revision: ::std::os::raw::c_int,
    #[doc = "\t\\brief board revision number"]
    #[doc = ""]
    #[doc = "\tThe board revision number can be read from a register. It is a four bit number"]
    #[doc = "\tthat changes when the schematic of the board is changed."]
    #[doc = "\t- 0: Experimental first board Version. Labeled \"Rev. 1\""]
    #[doc = "\t- 2: First commercial Version. Labeled \"Rev. 2\""]
    pub board_revision: ::std::os::raw::c_int,
    #[doc = "\t\\brief Describes the schematic configuration of the board."]
    #[doc = ""]
    #[doc = "\tThe same board schematic can be populated in multiple variants. This is a eight"]
    #[doc = "\tbit code that can be read from a register."]
    pub board_configuration: ::std::os::raw::c_int,
    #[doc = "!< Subversion revision id of the FPGA configuration."]
    pub subversion_revision: ::std::os::raw::c_int,
    #[doc = "!< 16bit factory ID of the TDC chip."]
    pub chip_id: ::std::os::raw::c_int,
    #[doc = "\t\\brief Serial number"]
    #[doc = ""]
    #[doc = "\twith year and running number in 8.24 format. The number is identical to the one"]
    #[doc = "\tprinted on the silvery sticker on the board."]
    pub board_serial: ::std::os::raw::c_int,
    #[doc = "!< low 32 bits of 64 bit manufacturer serial number of the flash chip"]
    pub flash_serial_low: ::std::os::raw::c_uint,
    #[doc = "!< high 32 bits of 64 bit manufacturer serial number of the flash chip"]
    pub flash_serial_high: ::std::os::raw::c_uint,
    #[doc = "\t\\brief Flash data is valid and in use"]
    #[doc = ""]
    #[doc = "\tIf not 0 the driver found valid calibration data in the flash on the board and is using it."]
    pub flash_valid: ::std::os::raw::c_int,
    #[doc = " \\brief calibration date"]
    #[doc = ""]
    #[doc = " DIN EN ISO 8601 string YYYY-MM-DD HH:DD describing the time when the card was calibrated."]
    pub calibration_date: [::std::os::raw::c_char; 20usize],
}
#[doc = " \\ingroup fastinfo"]
#[doc = "\t\\brief contains fast dynamic information"]
#[doc = ""]
#[doc = "\tThis call returns a structure that contains dynamic information that can be obtained"]
#[doc = "\twithin a few microseconds."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct tdc4_fast_info {
    #[doc = "!< The number of bytes occupied by the structure"]
    pub size: ::std::os::raw::c_int,
    #[doc = "!< The version number"]
    pub version: ::std::os::raw::c_int,
    #[doc = " \\brief Speed of the TDC fan."]
    #[doc = ""]
    #[doc = "\tReports 0, if no fan is present"]
    pub tdc_rpm: ::std::os::raw::c_int,
    #[doc = " \\brief Speed of the FPGA fan."]
    #[doc = ""]
    #[doc = " Reports 0, if no fan is present."]
    pub fpga_rpm: ::std::os::raw::c_int,
    #[doc = "\t\\brief Alert bits from temperature sensor and the system monitor"]
    #[doc = ""]
    #[doc = "\t- bit 0:\tTHS788 over temperature alarm"]
    pub alerts: ::std::os::raw::c_int,
    #[doc = " \\brief organizes power supply of PCIe lanes."]
    pub pcie_pwr_mgmt: ::std::os::raw::c_int,
    #[doc = "!< Number of PCIe lanes the card uses."]
    pub pcie_link_width: ::std::os::raw::c_int,
    #[doc = "\t\\brief Maximum size for a single PCIe transaction"]
    #[doc = "  in bytes. Depends on system configuration."]
    pub pcie_max_payload: ::std::os::raw::c_int,
}
#[doc = " \\ingroup paraminfo"]
#[doc = "\t\\brief contains configuration changes"]
#[doc = ""]
#[doc = "\tStructure filled by @link statfuncts xtdc4_get_param_info() @endlink. This structure"]
#[doc = "\tcontains information that change indirectly due to configuration changes."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct tdc4_param_info {
    #[doc = "!< The number of bytes occupied by the structure"]
    pub size: ::std::os::raw::c_int,
    #[doc = "!< The version number"]
    pub version: ::std::os::raw::c_int,
    #[doc = "\t\\brief Binsize (in ps) of the measured TDC data."]
    #[doc = ""]
    #[doc = "\tThe TDC main clk is running at a frequency of 76.8 GHz"]
    #[doc = "  resulting in a binsize of ~13.0208 ps."]
    pub binsize: f64,
    #[doc = "\t\\brief Board ID"]
    #[doc = ""]
    #[doc = "\tThe board uses this ID to identify itself in the output data stream. The ID takes"]
    #[doc = "\tvalues between 0 and 255."]
    pub board_id: ::std::os::raw::c_int,
    #[doc = "\t\\brief Number of channels in the current TDC mode"]
    #[doc = ""]
    #[doc = " Currently fixed at 4."]
    pub channels: ::std::os::raw::c_int,
    #[doc = " \\brief bit assignment of each enabled input channel."]
    #[doc = ""]
    #[doc = "\tMask assigns a certain bit to each enabled input channel."]
    pub channel_mask: ::std::os::raw::c_int,
    #[doc = "!< The total amount of DMA buffer in bytes."]
    pub total_buffer: ::std::os::raw::c_longlong,
}
#[doc = "\t\\ingroup channel"]
#[doc = "\t\\brief Contains TDC channel settings"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct tdc4_channel {
    #[doc = "!< Enable TDC channel."]
    pub enabled: ::std::os::raw::c_uchar,
    #[doc = "!< Set whether to record rising or falling edges."]
    pub rising: ::std::os::raw::c_uchar,
    #[doc = "!< Enable carry chain TDC as backup"]
    pub cc_enable: ::std::os::raw::c_uchar,
    #[doc = "!< Set whether the carry chain TDC records the same edge as THS788 (as backup) or opposite edge"]
    pub cc_same_edge: ::std::os::raw::c_uchar,
    #[doc = "!< Disable THS788 timestamps"]
    pub ths788_disable: ::std::os::raw::c_uchar,
    #[doc = "\t\\brief Veto function"]
    #[doc = ""]
    #[doc = "\tonly timestamps >= start are recorded."]
    pub start: ::std::os::raw::c_int,
    #[doc = "\t\\brief Veto function"]
    #[doc = ""]
    #[doc = "\tonly timestamps <= stop are recorded."]
    pub stop: ::std::os::raw::c_int,
}
#[doc = "\t\\ingroup lowres_channel"]
#[doc = "\t\\brief Contains digital channel settings"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct tdc4_lowres_channel {
    #[doc = "!< Enable TDC channel."]
    pub enabled: ::std::os::raw::c_uchar,
    #[doc = "\t\\brief Veto function"]
    #[doc = ""]
    #[doc = "\tonly timestamps >= start are recorded."]
    pub start: ::std::os::raw::c_int,
    #[doc = "\t\\brief Veto function"]
    #[doc = ""]
    #[doc = "\tonly timestamps <= stop are recorded."]
    pub stop: ::std::os::raw::c_int,
}
#[doc = "\t\\ingroup tiger"]
#[doc = "\t\\brief contains settings of timing generator"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct tdc4_tiger_block {
    #[doc = "!< activates timing generator"]
    pub enable: ::std::os::raw::c_uchar,
    #[doc = " \\brief inverts output polarity"]
    #[doc = ""]
    #[doc = " default is set to false."]
    pub negate: ::std::os::raw::c_uchar,
    #[doc = "\t\\brief enables/disables retrigger setting"]
    #[doc = ""]
    #[doc = "\tDefault is set to false. If retriggering is enabled the timer is reset to the value of the start"]
    #[doc = "\tparameter, whenever the input signal is set while waiting to reach the stop time."]
    pub retrigger: ::std::os::raw::c_uchar,
    #[doc = "!< not implemented"]
    pub extend: ::std::os::raw::c_uchar,
    #[doc = "!< enables the LEMO output"]
    pub enable_lemo_output: ::std::os::raw::c_uchar,
    #[doc = " \\brief Precursor"]
    #[doc = ""]
    #[doc = "  Number of 6.6ns clock cycles before the tiger output goes active"]
    #[doc = "\trelative to the trigger signal."]
    pub start: ::std::os::raw::c_int,
    #[doc = " \\brief postcursor"]
    #[doc = ""]
    #[doc = "  Number of 6.6ns clock cycles before the tiger output goes inactive"]
    #[doc = "\trelative to the trigger signal."]
    pub stop: ::std::os::raw::c_int,
    #[doc = "\t\\brief mask for choosing the trigger source"]
    #[doc = ""]
    #[doc = "\tA bit mask with a bit set for all trigger sources that can trigger this channel. Default is"]
    #[doc = "\tXTDC4_TRIGGER_SOURCE_S. One can choose a from a source @link deftriggersource here @endlink."]
    pub sources: ::std::os::raw::c_int,
}
#[doc = "\\ingroup trigger"]
#[doc = "\t\\brief contains trigger settings"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct tdc4_trigger {
    #[doc = "!< triggers on falling edges"]
    pub falling: ::std::os::raw::c_uchar,
    #[doc = "!< triggers on rising edges"]
    pub rising: ::std::os::raw::c_uchar,
}
